# Penumbra

./: .gitignore  LICENSE  README.md
ShadowFS/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  socket_server.go
ShadowFS/backend/: backend.go  backend_test.go  operations.go  overlay.go  overlay_linux.go  persist.go  persist_test.go
ShadowFS/tests/: agent_wrapper.py  integration_test.py
ShadowObserve/: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.py
ShadowObserve/bpf/: cri.bpf.h  enforce.bpf.c  observ.bpf.c  observ_common.h
ShadowObserve/include/ghostbpf-observ/: audit_engine.h  enforcer.h  observer.h  socket_server.h
ShadowObserve/src/: audit_engine.cpp  daemon.cpp  demo.cpp  enforcer.cpp  observer.cpp  socket_server.cpp
ShadowObserve/tests/: test_dual_path_audit.cpp
ShadowProc/: Cargo.toml  README.md  build.rs
ShadowProc/src/: bpf_loader.rs  cli.rs  event_handler.rs  main.rs  memory_tracker.rs  process_manager.rs  socket_server.rs
ShadowProc/src/bpf/: shadow_proc.bpf.c  shadow_proc.skel.rs
ShadowProc/tests/: h2_connect_target  h2_connect_target.c  h2_target  h2_target.c  h2_verify.py  manual_test.sh  reject_lsm_verify.py  run_test.sh  test_target.c
demo/: orch_client.py  run_demo.sh  run_demo_full.sh  session_demo.sh  session_integrated_demo.sh
demo/test_programs/: agent_worker.c  cgroup_exec.c  cgroup_exec_hold  cgroup_exec_hold.c  exit_hold_lib.c  file_mutator  file_mutator.c  file_reader_writer.c  ipc_shm  ipc_shm.c  mem_modifier.c  priv_escalator  priv_escalator.c  read_proc_mem.py
orchestrator/: session_proxy.py  shadow_orchestrator.py  test_finalization.py  test_log_integrity.py  test_release_path.py
tests/: integration_test.py
