[package]
name = "shadow-proc"
version = "0.1.0"
edition = "2021"
description = "eBPF-based process communication interceptor and freezer"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3.4"
libbpf-rs = "0.23"
libc = "0.2"
nix = { version = "0.28", features = ["signal", "process", "ptrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
libbpf-cargo = "0.23"
